docs/build/zh-Hans/api/5.9/core/enum/QueryFlag.md
# QueryFlag<!-- -->

## Index[**](#Index)

### Enumeration Members

* [**AUTO\_JOIN\_ONE\_TO\_ONE\_OWNER](#AUTO_JOIN_ONE_TO_ONE_OWNER)
* [**CONVERT\_CUSTOM\_TYPES](#CONVERT_CUSTOM_TYPES)
* [**DELETE\_SUB\_QUERY](#DELETE_SUB_QUERY)
* [**DISABLE\_PAGINATE](#DISABLE_PAGINATE)
* [**DISTINCT](#DISTINCT)
* [**INCLUDE\_LAZY\_FORMULAS](#INCLUDE_LAZY_FORMULAS)
* [**PAGINATE](#PAGINATE)
* [**UPDATE\_SUB\_QUERY](#UPDATE_SUB_QUERY)

## Enumeration Members<!-- -->[**](<#Enumeration Members>)

### [**](#AUTO_JOIN_ONE_TO_ONE_OWNER)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/core/src/enums.ts#L96)AUTO\_JOIN\_ONE\_TO\_ONE\_OWNER

**AUTO\_JOIN\_ONE\_TO\_ONE\_OWNER: AUTO\_JOIN\_ONE\_TO\_ONE\_OWNER

### [**](#CONVERT_CUSTOM_TYPES)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/core/src/enums.ts#L94)CONVERT\_CUSTOM\_TYPES

**CONVERT\_CUSTOM\_TYPES: CONVERT\_CUSTOM\_TYPES

### [**](#DELETE_SUB_QUERY)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/core/src/enums.ts#L93)DELETE\_SUB\_QUERY

**DELETE\_SUB\_QUERY: DELETE\_SUB\_QUERY

### [**](#DISABLE_PAGINATE)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/core/src/enums.ts#L91)DISABLE\_PAGINATE

**DISABLE\_PAGINATE: DISABLE\_PAGINATE

### [**](#DISTINCT)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/core/src/enums.ts#L89)DISTINCT

**DISTINCT: DISTINCT

### [**](#INCLUDE_LAZY_FORMULAS)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/core/src/enums.ts#L95)INCLUDE\_LAZY\_FORMULAS

**INCLUDE\_LAZY\_FORMULAS: INCLUDE\_LAZY\_FORMULAS

### [**](#PAGINATE)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/core/src/enums.ts#L90)PAGINATE

**PAGINATE: PAGINATE

### [**](#UPDATE_SUB_QUERY)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/core/src/enums.ts#L92)UPDATE\_SUB\_QUERY

**UPDATE\_SUB\_QUERY: UPDATE\_SUB\_QUERY
