docs/build/zh-Hans/api/6.6/core/enum/QueryFlag.md
# QueryFlag<!-- -->

## Index[**](#Index)

### Enumeration Members

* [**AUTO\_JOIN\_ONE\_TO\_ONE\_OWNER](#AUTO_JOIN_ONE_TO_ONE_OWNER)
* [**CONVERT\_CUSTOM\_TYPES](#CONVERT_CUSTOM_TYPES)
* [**DELETE\_SUB\_QUERY](#DELETE_SUB_QUERY)
* [**DISABLE\_NESTED\_INNER\_JOIN](#DISABLE_NESTED_INNER_JOIN)
* [**DISABLE\_PAGINATE](#DISABLE_PAGINATE)
* [**DISTINCT](#DISTINCT)
* [**IDENTITY\_INSERT](#IDENTITY_INSERT)
* [**INCLUDE\_LAZY\_FORMULAS](#INCLUDE_LAZY_FORMULAS)
* [**INFER\_POPULATE](#INFER_POPULATE)
* [**PAGINATE](#PAGINATE)
* [**UPDATE\_SUB\_QUERY](#UPDATE_SUB_QUERY)

## Enumeration Members<!-- -->[**](<#Enumeration Members>)

### [**](#AUTO_JOIN_ONE_TO_ONE_OWNER)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/enums.ts#L114)AUTO\_JOIN\_ONE\_TO\_ONE\_OWNER

**AUTO\_JOIN\_ONE\_TO\_ONE\_OWNER: AUTO\_JOIN\_ONE\_TO\_ONE\_OWNER

### [**](#CONVERT_CUSTOM_TYPES)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/enums.ts#L112)CONVERT\_CUSTOM\_TYPES

**CONVERT\_CUSTOM\_TYPES: CONVERT\_CUSTOM\_TYPES

### [**](#DELETE_SUB_QUERY)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/enums.ts#L111)DELETE\_SUB\_QUERY

**DELETE\_SUB\_QUERY: DELETE\_SUB\_QUERY

### [**](#DISABLE_NESTED_INNER_JOIN)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/enums.ts#L116)DISABLE\_NESTED\_INNER\_JOIN

**DISABLE\_NESTED\_INNER\_JOIN: DISABLE\_NESTED\_INNER\_JOIN

### [**](#DISABLE_PAGINATE)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/enums.ts#L109)DISABLE\_PAGINATE

**DISABLE\_PAGINATE: DISABLE\_PAGINATE

### [**](#DISTINCT)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/enums.ts#L107)DISTINCT

**DISTINCT: DISTINCT

### [**](#IDENTITY_INSERT)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/enums.ts#L117)IDENTITY\_INSERT

**IDENTITY\_INSERT: IDENTITY\_INSERT

### [**](#INCLUDE_LAZY_FORMULAS)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/enums.ts#L113)INCLUDE\_LAZY\_FORMULAS

**INCLUDE\_LAZY\_FORMULAS: INCLUDE\_LAZY\_FORMULAS

### [**](#INFER_POPULATE)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/enums.ts#L115)INFER\_POPULATE

**INFER\_POPULATE: INFER\_POPULATE

### [**](#PAGINATE)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/enums.ts#L108)PAGINATE

**PAGINATE: PAGINATE

### [**](#UPDATE_SUB_QUERY)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/core/src/enums.ts#L110)UPDATE\_SUB\_QUERY

**UPDATE\_SUB\_QUERY: UPDATE\_SUB\_QUERY
